Fixed alignment for mobile

--- a/frontend/src/css/layout/footer.css
+++ b/frontend/src/css/layout/footer.css
@@ -46,16 +46,23 @@
 /* Media: Tablet */
 
 @media screen and (max-width: 750px) {
+    .footer-container {
+        padding: 2rem 0;
+    }
+    #footer-wrapper-2{
+        order: 3;
+    }
+    #footer-wrapper-3{
+        order: 1;
+    }
+    #footer-wrapper-4{
+        order: 2;
+    }
     .footer-content {
         padding: 0 0 2rem 0;
     }
     .footer-logo-wrapper {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-    }
-    .footer-logo {
-        width: 50%;
+        display: none;
     }
     .footer-partner-container {
         height: 100%;
@@ -63,9 +70,9 @@
         flex-direction: row;
         justify-content: flex-start;
     }
-    
     .footer-partner {
         width: 20%;
+        height: 20%;
         margin-right: 1rem;
     }
 }
